ok, this should work

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "repository": "",
   "author": "",
   "license": "BSD",
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "dependencies": {
+    "sqlite3": "~2.1.7"
+  }
 }
